sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_id_missing/errors.duarouter
Error: Missing id of a 'routeDistribution'-object.
Quitting (on error).
